# agentix-toolkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
changelog/: index.html
docs/: gen_ref_pages.py  getting-started.md  index.md  security.md
docs/guides/: concurrency.md  cost-and-control.md  evals.md  memory-and-context.md  multimodal.md  observability.md  persistence.md  prompts.md  providers.md  reliability.md  serving.md  streaming.md  structured-output.md  tools.md
examples/: 01_hello_agent.py  02_tool_use.py  03_async_dynamic_loop.py  04_policy_and_trust.py  05_anthropic_model.py  06_tool_decorator.py  07_guards.py  08_persistence.py  09_streaming.py  10_concurrency.py  11_mcp.py  12_context.py  13_subagents.py  14_cost_and_interrupt.py  15_permissions.py  16_reliability.py  17_eval.py  18_verification.py  19_tracing.py  20_prompts.py  21_providers.py  22_multimodal.py  23_sandbox.py  24_suspend_resume.py  25_token_context.py  26_memory.py  27_structured_output.py  28_rate_limit.py  29_cassettes.py  30_serving_fastapi.py  README.md
getting-started/: index.html  index.md
guides/concurrency/: index.html  index.md
guides/cost-and-control/: index.html  index.md
guides/evals/: index.html  index.md
guides/memory-and-context/: index.html  index.md
guides/multimodal/: index.html  index.md
guides/observability/: index.html  index.md
guides/persistence/: index.html  index.md
guides/prompts/: index.html  index.md
guides/providers/: index.html  index.md
guides/reliability/: index.html  index.md
guides/serving/: index.html  index.md
guides/streaming/: index.html  index.md
guides/structured-output/: index.html  index.md
guides/tools/: index.html  index.md
reference/SUMMARY/: index.html
reference/agent/: index.html
reference/cassette/: index.html
reference/concurrency/: index.html
reference/confirm/: index.html
reference/consistency/: index.html
reference/content/: index.html
reference/context/: index.html
reference/control/: index.html
reference/errors/: index.html
reference/evals/: index.html
reference/events/: index.html
reference/executors/: index.html
reference/guards/: index.html
reference/guards/base/: index.html
reference/guards/injection/: index.html
reference/guards/judge/: index.html
reference/guards/permissions/: index.html
reference/guards/pii/: index.html
reference/guards/tiers/: index.html
reference/guards/trust/: index.html
reference/mcp/: index.html
reference/memory/: index.html
reference/model/: index.html
reference/policy/: index.html
reference/pricing/: index.html
reference/prompts/: index.html
reference/providers/: index.html
reference/providers/anthropic/: index.html
reference/providers/bedrock/: index.html
reference/providers/gemini/: index.html
reference/providers/litellm/: index.html
reference/providers/mock/: index.html
reference/providers/ollama/: index.html
reference/providers/openai/: index.html
reference/resilience/: index.html
reference/sandbox/: index.html
reference/serde/: index.html
reference/serving/: index.html
reference/store/: index.html
reference/streaming/: index.html
reference/subagents/: index.html
reference/tools/: index.html
reference/tracing/: index.html
reference/types/: index.html
reference/validation/: index.html
search/: search_index.json
security/: index.html  index.md
src/agentix/: __init__.py  agent.py  cassette.py  concurrency.py  confirm.py  consistency.py  content.py  context.py  control.py  errors.py  evals.py  events.py  executors.py  mcp.py  memory.py  model.py  policy.py  pricing.py  prompts.py  resilience.py  sandbox.py  serde.py  serving.py  store.py  streaming.py  subagents.py  tools.py  tracing.py  types.py  validation.py
src/agentix/guards/: __init__.py  base.py  injection.py  judge.py  permissions.py  pii.py  tiers.py  trust.py
src/agentix/providers/: __init__.py  _openai_compat.py  anthropic.py  bedrock.py  gemini.py  litellm.py  mock.py  ollama.py  openai.py
tests/: test_agent.py  test_anthropic_adapter.py  test_bedrock_adapter.py  test_concurrency.py  test_consistency.py  test_content.py  test_context.py  test_cost_and_interrupt.py  test_evals.py  test_gemini_adapter.py  test_guards.py  test_judge.py  test_litellm_adapter.py  test_mcp.py  test_memory.py  test_multimodal_adapters.py  test_ollama_adapter.py  test_openai_adapter.py  test_permissions.py  test_persistence.py  test_prompts.py  test_rate_limit.py  test_resilience.py  test_sandbox.py  test_serving.py  test_streaming.py  test_structured_output.py  test_subagents.py  test_suspend.py  test_tier_c.py  test_token_context.py  test_tools.py  test_tracing.py  test_types.py  test_validation.py
