[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix"
version = "0.1.0"
description = "A generic, batteries-included agent toolkit: configure the loop, tools, guards, and observability instead of rewriting them."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sanjaya Wijeratne", email = "skwijeratne@gmail.com" }]
keywords = ["agent", "llm", "agents", "tools", "ai", "toolkit", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

# Runtime extras (installed on demand): the optional provider/integration deps.
[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]

# Dev tooling lives in a PEP 735 dependency group, installed by `uv sync`
# (uv includes the `dev` group by default). Not published as an extra.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/skwijeratne/agentix"
Repository = "https://github.com/skwijeratne/agentix"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
