[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-toolkit"
version = "0.3.0"
description = "A generic, batteries-included agent toolkit: configure the loop, tools, guards, and observability instead of rewriting them."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sanjaya Wijeratne", email = "skwijeratne@gmail.com" }]
keywords = ["agent", "llm", "agents", "tools", "ai", "toolkit", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

# Runtime extras (installed on demand): the optional provider/integration deps.
[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=0.3"]
bedrock = ["boto3>=1.34"]
ollama = ["ollama>=0.3"]
litellm = ["litellm>=1.40"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20"]

# Dev tooling lives in a PEP 735 dependency group, installed by `uv sync`
# (uv includes the `dev` group by default). Not published as an extra.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/skwijeratne/agentix-toolkit"
Repository = "https://github.com/skwijeratne/agentix-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# Optional, lazily-imported deps — don't require their stubs to type-check.
[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "openai.*",
    "google.*",
    "boto3.*",
    "ollama.*",
    "litellm.*",
]
ignore_missing_imports = true
