[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-toolkit"
version = "0.4.1"
description = "A generic, batteries-included agent toolkit: configure the loop, tools, guards, and observability instead of rewriting them."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sanjaya Wijeratne", email = "skwijeratne@gmail.com" }]
keywords = [
    "agent",
    "agents",
    "ai-agents",
    "agent-framework",
    "agentic",
    "llm",
    "ai",
    "tool-use",
    "guardrails",
    "mcp",
    "anthropic",
    "claude",
    "openai",
    "gemini",
    "async",
    "toolkit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

# Runtime extras (installed on demand): the optional provider/integration deps.
[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=0.3"]
bedrock = ["boto3>=1.34"]
ollama = ["ollama>=0.3"]
litellm = ["litellm>=1.40"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20"]

# Dev tooling lives in a PEP 735 dependency group, installed by `uv sync`
# (uv includes the `dev` group by default). Not published as an extra.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Docs site toolchain (mkdocs-material + API reference from docstrings).
# Build locally with: uv run --group docs mkdocs serve
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-llmstxt>=0.2",
]

[project.urls]
Homepage = "https://skwijeratne.github.io/agentix-toolkit/"
Documentation = "https://skwijeratne.github.io/agentix-toolkit/"
Repository = "https://github.com/skwijeratne/agentix-toolkit"
Changelog = "https://github.com/skwijeratne/agentix-toolkit/blob/main/CHANGELOG.md"
Issues = "https://github.com/skwijeratne/agentix-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# Optional, lazily-imported deps — don't require their stubs to type-check.
[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "openai.*",
    "google.*",
    "boto3.*",
    "ollama.*",
    "litellm.*",
]
ignore_missing_imports = true
